<resources>
    <string name="app_name">BulletinBoardApp</string>
    <string name="ad_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ac_sign_up">Регистрация</string>
    <string name="ac_sign_in">Вход</string>
    <string name="ac_sign_out">Выход</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь.</string>

    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите ваш Email</string>
    <string name="email_reset_password_was_sent">Письмо для восстановления пароля было отправлено, на ваш почтовый адрес.</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="sign_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться.</string>
    <string name="sign_in_error">Не удалось войти.</string>
    <string name="send_verification_error">Не удалось отправить email для подтверждения!</string>
    <string name="send_verification_done">На вашу почту отправлено письмо с подтверждением, пожалуйста подтвердите ваш аккаунт.</string>

    <!-- Sign Dialog -->
    <string name="link_done">Email успешно подключен к Google аккаунту.</string>
    <string name="enter_to_G">У вас уже существует идентичный аккаунт google. Для того чтобы продолжить войдите в аккаунт google.</string>

    <!-- Edit Activity -->
    <string name="select_country">* Выберите страну</string>
    <string name="select_city">* Выберите город</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index_title">Индекс</string>
    <string name="index">*Индекс</string>
    <string name="tel">Телефон</string>
    <string name="tel_number">*Телефонный номер</string>
    <string name="category">Категория</string>
    <string name="title">Заголовок</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Укажите цену</string>
    <string name="title_hint">*Название объявления</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Описание</string>
    <string name="with_send">С отправкой</string>
    <string name="send">Отправка</string>
    <string name="publish">Опубликовать</string>

    <!-- Ad List Item -->
    <string name="price_title">Цена:</string>
</resources>