<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_cat1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/id_my_ads"
                    android:title="@string/ad_my_ads" />
                <item
                    android:id="@+id/id_car"
                    android:title="@string/ad_car" />
                <item
                    android:id="@+id/id_pc"
                    android:title="@string/ad_pc" />
                <item
                    android:id="@+id/id_smartphone"
                    android:title="@string/ad_smartphone" />
                <item
                    android:id="@+id/id_dm"
                    android:title="@string/ad_dm" />
            </group>

        </menu>
    </item>

    <item android:title="@string/ad_cat2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/id_sign_up"
                    android:title="@string/ac_sign_up" />
                <item
                    android:id="@+id/id_sign_in"
                    android:title="@string/ac_sign_in" />
                <item
                    android:id="@+id/id_sign_out"
                    android:title="@string/ac_sign_out" />
            </group>
        </menu>
    </item>

</menu>